[package]
name = "t3_parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
t3_lexer = { path = "../t3_lex" }
inkwell = { version = "0.9.0", features = ["llvm22-1"] }


[lints]
workspace = true
